name:                VYPe15
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/VYPe15#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable VYPe15
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       VYPe15.Internal.Lexer
                       VYPe15.Internal.Parser
                       VYPe15.Internal.Semantics
                       VYPe15.Types.AST
                       VYPe15.Types.Tokens
                       VYPe15.Types.Semantics
                       VYPe15.Types.SymbolTable
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , array
                       , bytestring
                       , containers
                       , data-default
                       , mtl >=2.2.1 && <2.3
                       -- We need mtl at least 2.2.1 for Control.Monad.Except
                       , parsec
                       , transformers
                       , vector
  ghc-options:         -Wall -fwarn-implicit-prelude -fwarn-missing-import-lists
